--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           PAGES_BRANCH: main
           BUILD_DIR: .
           TOKEN: ${{ secrets.PUBLIC_TOKEN }}
-          REPOSITORY: username/username.github.io
+          REPOSITORY: mirabellensaft/mirabellensaft.github.io
