--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
         env:
           PAGES_BRANCH: main
           BUILD_DIR: .
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPOSITORY: mirabellensaft/mirabellensaftpresse
+          TOKEN: ${{ secrets.PUBLIC_TOKEN }}
+          REPOSITORY: mirabellensaft/mirabellensaft.github.io
