--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,10 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
+# RSS? Yes, Please!
+generate_feed = true 
+feed_filename = "rss.xml"
+
 # The site theme to use.
 theme = "andromeda"
 
