--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,7 @@ theme = "andromeda"
 title = "Mirabellensaftpresse"
 description = "This and that."
 
+author = "Tanks"
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
