with valid email

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ theme = "andromeda"
 title = "Mirabellensaftpresse"
 description = "This and that."
 
-author = "Tanks"
+author = "mir@bellen.space (Tanks)"
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
