--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ theme = "andromeda"
 
 # Site title
 title = "Mirabellensaftpresse"
-description = "This and that. A personal website."
+description = "This and that."
 
 author = "info@transfeld.net"
 [markdown]
@@ -26,11 +26,15 @@ highlight_code = true
 
 [extra]
 # Put all your custom variables here
-header_links = [
-    # {name = "CV", url = "/cv.pdf"},
+header_links_int = [
+
     {name = "About", url = "/about"},
     {name = "Impressum", url = "/impressum"},
     {name = "RSS", url = "/rss.xml"},
+]
+header_links_ext = [
+    # {name = "CV", url = "/cv.pdf"}, 
+    {name = "Shop", url = "https://ko-fi.com/S6S0N8I4U"}
 ]
 license = "CC BY-NC 2.0"
 email = "info@transfeld.net"
